--- a/build.gradle
+++ b/build.gradle
@@ -498,8 +498,12 @@ configurations {
 String mixinProviderSpec = 'zone.rong:mixinbooter:9.1'
 dependencies {
 
-    compileOnly files('libs/EnderIO-1.12.2-5.3.72.jar')
-    compileOnly files('libs/EnderCore-1.12.2-0.5.78.jar')
+//    compileOnly files('libs/EnderIO-1.12.2-5.3.72.jar')
+//    compileOnly files('libs/EnderCore-1.12.2-0.5.78.jar')
+
+    implementation rfg.deobf("curse.maven:enderio-64578:4674244")
+    implementation rfg.deobf("curse.maven:endercore-231868:4671384")
+
 
 
     if (usesMixins.toBoolean()) {
