--- a/build.gradle
+++ b/build.gradle
@@ -498,8 +498,10 @@ configurations {
 String mixinProviderSpec = 'zone.rong:mixinbooter:9.1'
 dependencies {
 
-    implementation rfg.deobf("curse.maven:enderio-64578:4674244")
-    implementation rfg.deobf("curse.maven:endercore-231868:4671384")
+//    implementation rfg.deobf("curse.maven:enderio-64578:4674244")
+//    implementation rfg.deobf("curse.maven:endercore-231868:4671384")
+    compileOnly rfg.deobf("curse.maven:endercore-231868:4671384")
+    compileOnly rfg.deobf("curse.maven:enderio-64578:4674244")
 
 
 
